# YouTube-RAG-project

./: .env.example  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  think_demo.py
frontend/: package-lock.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  Header.tsx  HealthBadge.tsx  IngestPanel.tsx
frontend/src/lib/: api.ts
src/: chunker.py  generator.py  ingest.py  retriever.py  store.py
tests/: test_chunker.py  test_config.py  test_ingest.py
